designing web page

--- a/demo.html
+++ b/demo.html
@@ -8,15 +8,17 @@
 </head>
  <body>
     <!-- box -->
-    <section id="circle">
-        <div class></div>  
+    <section id="box">
+        <div class="box1"></div>  
     </section>
   <!-- circle section -->
     <section id="circle">
-    <div class="dot">
+    <div class="dot"
     <span class="dot"></span>
     </div>
      </section>
+     </body>
+</html>
 
  
 
